force-app/main/default/objects/Postal_Code_Range__c/Postal_Code_Range__c.object-meta.xml
<CustomObject>
    <label>Postal Code Range</label>
    <nameField>
        <displayFormat>PCR-{0000000000}</displayFormat>
        <label>Postal Code Range Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Postal Code Ranges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>