force-app/main/default/objects/Postal_Code_Range__c/fields/Post_Code_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Post_Code_Prefix__c</fullName>
    <description>For UK Postal codes</description>
    <label>Post Code Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>