force-app/main/default/objects/Postal_Code_Range__c/fields/Postal_Code_Start__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Start__c</fullName>
    <label>Postal Code Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>