force-app/main/default/objects/Postal_Code_Range__c/fields/PostalCodeAssignment__c.field-meta.xml
<CustomField>
    <fullName>PostalCodeAssignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Postal Code Assignment</label>
    <referenceTo>Postal_Code_Assignment__c</referenceTo>
    <relationshipLabel>Postal Code Ranges</relationshipLabel>
    <relationshipName>PostalCodeRanges</relationshipName>
    <type>Lookup</type>
</CustomField>