force-app/main/default/objects/Postal_Code_Range__c/fields/PostalCodeEnd__c.field-meta.xml
<CustomField>
    <fullName>PostalCodeEnd__c</fullName>
    <label>Postal Code End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>